add longterm booking cac kieu